--- a/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
+++ b/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <input type="checkbox" id="nav-toggle">
     <div class="sidebar">
         <div class="sidebar-brand">
-            <h2><span class="fas fa-graduation-cap"></span><span>HealthLife</span></h2>
+            <h2><span>HealthLife</span></h2>
         </div>
         
         <!--Opciones del menú lateral-->
@@ -14,7 +14,7 @@
                 </li>
                 <li>
                     <a href=""> <span class="fas fa-chart-bar"></span>
-                    <span>Estadísticas</span></a>
+                    <span>Mis cursos</span></a>
                 </li>
                 <li>
                     <a href=""> <span class="fas fa-users"></span>
@@ -22,7 +22,7 @@
                 </li>
                 <li>
                     <a href=""> <span class="fas fa-comments"></span>
-                    <span>Planes</span></a>
+                    <span>Estadísticas</span></a>
                 </li>
                 <li>
                     <a href=""> <span class="fas fa-crown"></span>
