--- a/HealthLife/src/app/Cliente/dashboard/dashboard.component.css
+++ b/HealthLife/src/app/Cliente/dashboard/dashboard.component.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 :root{
     --main-color: rgb(5, 196, 88);
     --color-dark: #1D2231; 
     --text-grey: #8390A2;
 }
-
 *{
     padding: 0;
     margin: 0;
@@ -21,7 +21,7 @@
     left: 0;
     top: 0;
     height: 100%;
-    background: var(--main-color);
+    background: rgb(5, 196, 88);
     z-index: 100;
     transition: width 300ms;
 }
@@ -58,7 +58,7 @@
     background: #fff;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    color: var(--main-color);
+    color: rgb(5, 196, 88);
     border-radius: 20px 0px 0px 20px;
 }
 
@@ -145,8 +145,9 @@ header label span{
     border: 1px solid #ccc;
     border-radius: 30px;
     height: 50px;
+    width: 220px;
     display: flex;
-    align-items: center;
+    text-align: center;
     overflow-x: hidden;
     color: lightslategray;
 }
@@ -172,18 +173,41 @@ header label span{
     color: #222;
 }
 
+#combobox{
+    height: 48px;
+    border: #8390A2;
+    margin-left: 18px;
+}
+
+#combobox:hover{
+    cursor: pointer;
+}
+
+#combobox option{
+    text-align: center;
+    font-size: 20px;
+}
+
+
+#lenguaje-practicando{
+    margin-top: 0px;
+}
+
 .user-wrapper img{
     border-radius: 50%;
     margin-right: 1rem;
+    border: 1px solid gray;
+    border-radius: 50px;
+
 }
 
 .user-wrapper img{
     display: inline-block;
-    color: var(--text-grey);
+    color:  #8390A2;
 }
 
 .user-wrapper h4{
-    margin-top: 5%;
+    margin-top: 0%;
 }
 
 /*---------------------------Contenido de la página Main--------------------------*/
@@ -213,6 +237,7 @@ main:hover{
     grid-gap: 1rem;
     margin-bottom: 1rem;
     margin-left: 40px;
+    width: 117%;
 }
 
 /*-------------------------------------Modulos (cuadros)--------------------------------*/
@@ -222,14 +247,19 @@ main:hover{
     background:wheat;
     padding: 2rem;
     border-radius: 15px;
-    color: var(--color-dark);
+    color: #1D2231;
     width: 80%;
     height: 100%;
+    margin: auto;
+}
+
+.tarjetas-simples:hover{
+    cursor: pointer;
 }
 
 .tarjetas-simples div:last-child span{
     font-size: 2.5rem;
-    color: var(--main-color);
+    color: rgb(5, 196, 88);
 }
 
 .tarjetas-simples h1{
@@ -237,11 +267,11 @@ main:hover{
 }
 
 .tarjetas-simples div:first-child span{
-    color: var(--text-grey);
+    color:  #8390A2;
 }
 
 #Ev-final:last-child{
-    background: var(--main-color);
+    background: rgb(5, 196, 88);
 }
 
 #Ev-final:last-child h1,
@@ -275,12 +305,12 @@ main:hover{
 }
 
 .tarjeta-header button{
-    background: var(--main-color);
+    background: rgb(5, 196, 88);
     border-radius: 10px;
     color:white;
     font-size: 0.8rem;
     padding: 0.5rem 1rem;
-    border: 1px solid var(--main-color)
+    border: 1px solid rgb(5, 196, 88);
 }
 
 
@@ -389,7 +419,7 @@ tr td:last-child{
     header h2 label{
         display: inline-block;
         text-align: center;
-        background: var(--main-color);
+        background: rgb(5, 196, 88);
         padding-right: 1rem;
         height: 40px;
         width: 40px;
@@ -455,6 +485,3 @@ tr td:last-child{
         justify-content: center;
     }
 }
-
-
-
