Corrección Login y Dashboard

--- a/HealthLife/src/app/Auth/login/login.component.html
+++ b/HealthLife/src/app/Auth/login/login.component.html
@@ -159,7 +159,7 @@
                   name="rol-profesional"
                   class="campo-entrada"
                   formControlName="rol">
-                  <option selected disabled>--- Seleccione su rol ---</option>
+                  <option value="seleccione-rol" selected disabled>--- Seleccione su rol ---</option>
                   <option value="nutricionista">Nutricionista</option>
                   <option value="entrenador">Entrenador</option>
                   </select>
