--- a/HealthLife/src/app/Cliente/dashboard/dashboard.component.css
+++ b/HealthLife/src/app/Cliente/dashboard/dashboard.component.css
@@ -16,12 +16,12 @@
 }
 
 .sidebar{
-    width: 345px;
+    width: 300px;
     position: fixed;
     left: 0;
     top: 0;
     height: 100%;
-    background: rgb(5, 196, 88);
+    background: #5dc460;
     z-index: 100;
     transition: width 300ms;
 }
@@ -35,6 +35,13 @@
 .sidebar-brand span{
     display: inline-block;
     padding-left: 1rem;
+    margin-top: 5px;
+}
+
+.sidebar-brand img{
+    width: 60px;
+    border-radius: 40%;
+    margin-top: -5px;
 }
 
 .sidebar-menu{
@@ -47,19 +54,44 @@
     padding-left: 1rem;
 }
 
+.sidebar-menu li a:hover{
+    /*margin-left: 1rem;*/
+    transition: all 300ms ease;
+    transform: scale(1.1);
+
+    background: #fff;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    color: rgb(5, 196, 88);
+    border-radius: 0px 0px 0px 0px;
+}
+
 .sidebar-menu a{
     padding-left: 1rem;
     display: block;
     color:white;
-    font-size: 1.1rem;
+    font-size: 19px;
+    align-items: center;
+    transition: all 300ms ease;
 }
 
-.sidebar-menu a.active{
+.sidebar-menu a fa-icon{
+    font-size: 22px;
+}
+
+/*.sidebar-menu a.active{
     background: #fff;
     padding-top: 1rem;
     padding-bottom: 1rem;
     color: rgb(5, 196, 88);
     border-radius: 20px 0px 0px 20px;
+}*/
+
+.derechos-reservados{
+    font-size: 12px;
+    color: white;
+    margin-top: 80px;
+    text-align: center;
 }
 
 #logo-menu:hover{
@@ -80,12 +112,12 @@
 }
 
 #nav-toggle:checked+.sidebar{
-    width: 70px;
+    width: 85px;
 }
 
 #nav-toggle:checked+.sidebar .sidebar-brand,
 #nav-toggle:checked+.sidebar li{
-    padding-left: 1rem;
+    padding-left: 0rem;
     text-align: center;
 }
 
@@ -99,12 +131,12 @@
 }
 
 #nav-toggle:checked~.main-content{
-    margin-left: 70px;
+    margin-left: 85px;
 }
 
 #nav-toggle:checked~.main-content header{
-    width: calc(100% - 70px);
-    left: 70px;
+    width: calc(100% - 85px);
+    left: 85px;
 }
 
 .main-content{
@@ -120,8 +152,8 @@ header{
     padding: 1rem 1.5rem;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     position: fixed;
-    left: 345px;
-    width: calc(100% - 345px);
+    left: 300px;
+    width: calc(100% - 300px);
     top: 0;
     z-index: 100;
     transition: letf 300ms;
@@ -171,7 +203,81 @@ header label span{
     display: flex;
     align-items: center;
     color: #222;
+    margin-right: 1%;
+    width: 25%;
 }
+
+.user-wrapper .user-name .dropdown{
+    margin-left: 5%;
+}
+
+#iconNotificacion{
+    margin-right: 10%;
+    font-size: 24px;
+}
+
+.user-name .dropdown{
+    margin-left: 5%;
+    border-radius: 50px;
+}
+
+.user-name .dropdown{
+    margin-left: -10%;
+    color: #000;
+    width: 100%;
+}
+
+.user-name .dropdown ul {
+    display: block;
+    position: absolute;
+    left: -18px;
+    margin-top: 10%;
+    margin-left: -40%;
+    padding: 10px 0;
+    z-index: 99;
+    opacity: 0;
+    visibility: hidden;
+    background: #fff;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+    transition: 0.3s;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.user-name .dropdown ul li {
+    min-width: 185px;
+    margin-left: 0%;
+    margin-top: 10%;
+}
+
+.user-name .dropdown ul a {
+    padding: 10px 20px;
+    font-size: 15px;
+    color: white;
+    margin-left: 2%;
+}
+
+.user-name .dropdown ul li:hover{
+    background: #fff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: rgb(5, 196, 88);
+}
+
+.user-name .dropdown ul li a:hover{
+    /*color: #2d71a1;*/
+    color: rgb(5, 196, 88);
+
+}
+
+.user-name .dropdown:hover > ul {
+    opacity: 1;
+    top: 100%;
+    visibility: visible;
+    background-color: #5dc460;
+}
+
+
+
 
 #combobox{
     height: 48px;
@@ -367,13 +473,13 @@ tr td:last-child{
 
 @media only screen and (max-width: 1200px){
     .sidebar{
-        width: 70px;
+        width: 85px;
     }
 
     .sidebar .sidebar-brand,
     .sidebar li{
         padding-left: 1rem;
-        text-align: center;
+        text-align:justify;
     }
 
     .sidebar li a{
@@ -453,28 +559,39 @@ tr td:last-child{
     #nav-toggle:checked+.sidebar{
         left: 0 !important;
         z-index: 100;
-        width: 345px;
+        /*Corregir el ancho*/
+        width: 100%;
     }
 
+
     #nav-toggle:checked+.sidebar:hover{
-        width: 345px;
-        z-index: 200px;
+        width: 100%;
+        /*z-index: 200px;*/
     }
 
     #nav-toggle:checked+.sidebar .sidebar-brand,
     #nav-toggle:checked+.sidebar:hover li{
         padding-left: 2rem;
-        text-align: left;
+        text-align: center;
     }
 
     #nav-toggle:checked+.sidebar li a{
         padding-left: 1rem;
-
     }
 
     #nav-toggle:checked+.sidebar .sidebar-brand h2 span:last-child,
     #nav-toggle:checked+.sidebar li a span:last-child{
         display: inline;
+    }
+
+    #logo-menu{
+        margin-left: 15px;
+    }
+
+    .user-wrapper{
+        width: 100%;
+        margin-left: -30%;
+        display:flex;
     }
 }
 
