--- a/HealthLife/src/app/Auth/login/login.component.css
+++ b/HealthLife/src/app/Auth/login/login.component.css
@@ -156,7 +156,11 @@ label {
     top: -2px;
 }
 
-.btn-ingresar, .btnUsuario, .btnProfesional{
+#iniciar{
+    background-color: #5dc460;
+}
+
+.btn-ingresar, .btnUsuario, .btnProfesional, .btnUsuario2{
     display: inline-block;
     width: 100%;
     height: 43px;
@@ -175,6 +179,10 @@ label {
 }
 
 .btnUsuario:hover {
+    background-color: #5dc460;
+}
+
+.btnUsuario2:hover {
     background-color: #5dc460;
 }
 
@@ -237,8 +245,15 @@ form.formulario-registro{
     opacity: 0;
     pointer-events: none;
 }
-
+/*Profesional*/
 form.formulario-registro2{
+    opacity: 0;
+    pointer-events: none;
+}
+
+/*Agregado*/
+/*Parte 2 del usuario*/
+form.formulario-registro3{
     opacity: 0;
     pointer-events: none;
 }
@@ -268,7 +283,32 @@ main.sign-up-mode-usuario form.formulario-registro{
     transition: 0.4s ease-in;
 }
 
+/*Agregado 11/08*/
+main.sign-up-mode-usuario.sign-up-mode-usuario2 form.formulario-registro3{
+    opacity: 1;
+    pointer-events: all;
+    transition: 0.4s ease-in;
+}
+
+main.sign-up-mode-usuario.sign-up-mode-usuario2 form.formulario-registro{
+    opacity: 0;
+    pointer-events: none;
+}
+
+main.sign-up-mode.sign-up-mode-profesional form.formulario-registro3{
+    opacity: 0;
+    pointer-events: none;
+}
+/**/
+
 main.sign-up-mode-profesional form.formulario-registro2{
+    opacity: 1;
+    pointer-events: all;
+    transition: 0.4s ease-in;
+}
+
+/*Agregago*/
+main.sign-up-mode-profesional form.formulario-registro3{
     opacity: 1;
     pointer-events: all;
     transition: 0.4s ease-in;
