--- a/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
+++ b/HealthLife/src/app/Cliente/dashboard/dashboard.component.html
@@ -8,32 +8,32 @@
         <!--Opciones del menú lateral-->
         <div class="sidebar-menu">
             <ul>
-                <li>
-                    <a href="" > <fa-icon [icon]="faHome"></fa-icon>
+                <li (click)="cambiarIndice(0)">
+                    <a> <fa-icon [icon]="faHome"></fa-icon>
                     <span>  &nbsp;Inicio</span> </a>
                 </li>
-                <li>
-                    <a href=""> <fa-icon [icon]="faPlanAlimenticio"></fa-icon>
+                <li (click)="cambiarIndice(1)">
+                    <a> <fa-icon [icon]="faPlanAlimenticio"></fa-icon>
                     <span>  &nbsp;Planes Alimenticios</span></a>
                 </li>
-                <li>
-                    <a href=""> <fa-icon [icon]="faPlanEjercicio"></fa-icon>
-                    <span>  &nbsp;Planes estadísticos</span></a>
+                <li (click)="cambiarIndice(2)">
+                    <a> <fa-icon [icon]="faPlanEjercicio"></fa-icon>
+                    <span>  &nbsp;Planes Ejercicios</span></a>
                 </li>
-                <li>
-                    <a href=""> <fa-icon [icon]="faProfesionales"></fa-icon>
+                <li (click)="cambiarIndice(3)">
+                    <a> <fa-icon [icon]="faProfesionales"></fa-icon>
                     <span>  &nbsp;Profesionales</span></a>
                 </li>
-                <li>
-                    <a href=""> <fa-icon [icon]="faEstadisticas"></fa-icon>
+                <li (click)="cambiarIndice(4)">
+                    <a> <fa-icon [icon]="faEstadisticas"></fa-icon>
                     <span>  &nbsp;Estadísticas</span></a>
                 </li>
-                <li>
-                    <a href=""> <fa-icon [icon]="faChat"></fa-icon>
+                <li (click)="cambiarIndice(5)">
+                    <a> <fa-icon [icon]="faChat"></fa-icon>
                     <span>  &nbsp;Chat</span></a>
                 </li>
-                <li>
-                    <a href=""> <fa-icon [icon]="faExperiencias"></fa-icon>
+                <li (click)="cambiarIndice(6)">
+                    <a> <fa-icon [icon]="faExperiencias"></fa-icon>
                     <span>  &nbsp;Experiencias</span></a>
                 </li>
             </ul>
@@ -59,11 +59,11 @@
                 <div class="user-name">
                     <!--El nombres que aparecerá en este h4 debe ser traido de la BD con el usuario logueado-->
                     <ul>
-                        <li id="empiezaYa" class="dropdown"><a><span> Jordan Vera <fa-icon [icon]="faFlechaAbajo"></fa-icon></span></a>
+                        <li id="empiezaYa" class="dropdown"><a><span> {{nomUsuario}} <fa-icon [icon]="faFlechaAbajo"></fa-icon></span></a>
                             <ul>
                                 <li><a routerLink="/perfil"><fa-icon [icon]="faUserPerfil"></fa-icon>  &nbsp;Mi perfil</a></li>
                                 <li><a routerLink="/configuracion"><fa-icon [icon]="faConfiguracion"></fa-icon>  &nbsp;Configuración</a></li>
-                                <li><a routerLink="/login"><fa-icon [icon]="faCerrarSesion"></fa-icon>  &nbsp;Cerrar sesión</a></li>
+                                <li><a (click)="cerrarSesion()"><fa-icon [icon]="faCerrarSesion"></fa-icon>  &nbsp;Cerrar sesión</a></li>
                                 <!--<li><a href="#">Registrarme</a></li>-->
                             </ul>
                         </li>
@@ -72,7 +72,7 @@
             </div>
         </header>
 
-        <main>
+        <main [ngSwitch]="indice">
             <!--Fila 1 de los módulos-->
             <!--<div class="tarjetas">
                 <div class="tarjetas-simples">
@@ -105,6 +105,10 @@
                     </div>
                 </div>
             </div>-->
+
+            <app-contenido-inicio *ngSwitchDefault></app-contenido-inicio>
+            <app-planes-alimenticios *ngSwitchCase="1"></app-planes-alimenticios>
+            <app-planes-ejercicios *ngSwitchCase="2"></app-planes-ejercicios>
         </main>
     </div>
 </body>
