--- a/HealthLife/src/app/inicio/inicio.component.html
+++ b/HealthLife/src/app/inicio/inicio.component.html
@@ -17,7 +17,7 @@
             <li><a href="#testimonios">Testimonios</a></li>
             <li id="empiezaYa" class="dropdown"><a><span>¡Empieza ya! <fa-icon [icon]="faFlechaAbajo"></fa-icon></span></a>
               <ul>
-                <li><a (click)="abrirLogin()" routerLink="/login">Iniciar sesión</a></li>
+                <li><a routerLink="/login">Iniciar sesión</a></li>
                 <!--<li><a href="#">Registrarme</a></li>-->
               </ul>
             </li>
