--- a/HealthLife/src/app/Auth/login/login.component.html
+++ b/HealthLife/src/app/Auth/login/login.component.html
@@ -44,8 +44,8 @@
               
               <!--Botón para el envío de los datos-->
               <input type="submit" value="Ingresar" class="btn-ingresar" id="iniciar"> 
-               <!--Botón para regresar al inicio-->
-               <input routerLink="/inicio" type="submit" value="Volver al inicio" class="btn-ingresar"> 
+              <!--Botón para regresar al inicio-->
+              <input routerLink="/inicio" type="submit" value="Volver al inicio" class="btn-ingresar"> 
 
               <!--Texto por si olvidó la contraseña-->
               <p class="text">
@@ -79,11 +79,10 @@
             </div>
           </form>
 
-          <!--[formGroup]="registroClienteForm" (ngSubmit)="registrarUsuario(registroClienteForm.value)"-->
-          <!--Formulario de registro usuarios PARTE 1 (info datos)-->
+          <!--Formulario de registro USUARIOS PARTE 1 (info datos)-->
           <form [formGroup]="registroClienteForm" autocomplete="off" class="formulario-registro" id="formulario-registro">
             <div class="heading">
-              <h2>Empecemos!<fa-icon [icon]="faCorazon"></fa-icon></h2>
+              <h2>Empecemos! <fa-icon [icon]="faCorazon"></fa-icon></h2>
             </div>
 
             <div class="actual-form">
@@ -160,14 +159,28 @@
             </div>
           </form>
 
-          <!--Formulario de registro usuarios PARTE 2 (info salud)-->
-          <form [formGroup]="registroClienteForm" (ngSubmit)="registrarUsuario(registroClienteForm.value, checkbox.checked)" autocomplete="off" class="formulario-registro3" id="formulario-registro3">
+          <!--Formulario de registro USUARIOS PARTE 2 (info salud)-->
+          <form [formGroup]="registroClienteForm" (ngSubmit)="registrarUsuario(registroClienteForm.value, checkbox.checked)" autocomplete="off" class="formulario-registro2" id="formulario-registro3">
             <div class="heading">
-              <h2>Un paso más!<fa-icon [icon]="faZapato"></fa-icon></h2>
+              <h2>Un paso más! <fa-icon [icon]="faZapato"></fa-icon></h2>
             </div>
             <div class="actual-form">
               <br/>
-              <!--Campo para ingresar nombres-->
+
+              <!--Seleccionar el género del usuario-->
+              <div class="entrada-textos">
+                <select 
+                  name="rol-profesional"
+                  class="campo-entrada"
+                  formControlName="sexo">
+                  <option value="seleccione-genero" selected disabled>Seleccione su género</option>
+                  <option value="masculino">Masculino</option>
+                  <option value="femenino">Femenino</option>
+                  <option value="femenino">Maricon</option>
+                  </select>
+              </div>
+
+              <!--Campo para ingresar la estatura en metros-->
               <div class="entrada-textos">
                 <input 
                   type="number" 
@@ -178,7 +191,7 @@
                   <label><fa-icon [icon]="faAltura"></fa-icon>  ‍‍‍Estatura (metros)</label>
               </div>
 
-              <!--Campo para ingresar apellidos-->
+              <!--Campo para ingresar el peso en KG-->
               <div class="entrada-textos">
                 <input 
                   type="number" 
@@ -189,18 +202,7 @@
                   <label><fa-icon [icon]="faPeso"></fa-icon>  ‍‍‍‍‍Peso (Kg)</label>
               </div>
 
-              <!--Campo para ingresar email-->
-              <div class="entrada-textos">
-                <input 
-                  type="text" 
-                  class="campo-entrada" 
-                  autocomplete="off" 
-                  required
-                  formControlName="habitos"/>
-                  <label><fa-icon [icon]="faHabitos"></fa-icon>  ‍‍‍‍‍Hábitos</label>
-              </div>
-              
-              <!--Campo para ingresar contraseña-->
+              <!--Campo para ingresar las alergias-->
               <div class="entrada-textos">
                 <input 
                   minlength="8" 
@@ -211,6 +213,7 @@
                   <label><fa-icon [icon]="faAlergias"></fa-icon>  ‍‍‍‍‍Alergias</label>
               </div>
 
+              <!--Campo para ingresar las enfermedades-->
               <div class="entrada-textos">
                 <input 
                   minlength="8" 
@@ -238,26 +241,14 @@
             </div>
           </form>
 
-          <!--Formulario para el registro de profesionales-->
-          <form [formGroup]="registroProfesionalesForm" (ngSubmit)="registrarProfesionales(registroProfesionalesForm.value, checkbox2.checked)" autocomplete="off" class="formulario-registro2" id="formulario-registro2">
+          <!--Formulario para el registro de PROFESIONALES PARTE 1-->
+          <form [formGroup]="registroProfesionalesForm" autocomplete="off" class="formulario-registro3" id="formulario-registro2">
             <div class="heading">
               <h2>Empecemos! <fa-icon [icon]="faCorazon"></fa-icon></h2>
             </div>
 
             <div class="actual-form">
               <br/>
-              <!--Campo para seleccionar el tipo de profesional-->
-              <div class="entrada-textos">
-                <select 
-                  name="rol-profesional"
-                  class="campo-entrada"
-                  formControlName="rol">
-                  <option value="seleccione-rol" selected disabled>--- Seleccione su rol ---</option>
-                  <option value="nutricionista">Nutricionista</option>
-                  <option value="entrenador">Entrenador</option>
-                  </select>
-              </div>
-
               <!--Campo para ingresar nombres-->
               <div class="entrada-textos">
                 <input 
@@ -291,18 +282,93 @@
                   <label><fa-icon [icon]="faEmail"></fa-icon>  ‍‍‍‍‍Email</label>
               </div>
               
-              <!--Campo para ingresar Contraseña-->
+              <!--Campo para ingresar contraseña-->
               <div class="entrada-textos">
                 <input 
+                  #clave3
+                  id="clave3"
+                  type="password" 
+                  minlength="8" 
+                  class="campo-entrada" 
+                  autocomplete="off" 
+                  required
+                  />
+                  <label><fa-icon [icon]="faClave"></fa-icon>  ‍‍‍‍‍Contraseña</label>
+              </div>
+
+              <!--Campo para confirmar la contraseña-->
+              <div class="entrada-textos">
+                <input
+                  #clave4
+                  id="clave4"
                   type="password" 
                   minlength="8" 
                   class="campo-entrada" 
                   autocomplete="off" 
                   required
                   formControlName="clave"/>
-                  <label><fa-icon [icon]="faClave"></fa-icon>  ‍‍‍‍‍Contraseña</label>
+                  <label><fa-icon [icon]="faClave"></fa-icon>  ‍‍‍‍‍Confirmar contraseña</label>
               </div>
               
+              <br/>
+
+              <!--Botones para regresar o registrarse-->
+              <div class="botones-registro-usuario">
+                <input type="button" value="Atrás" class="btnProfesional">
+                <input type="submit" 
+                (click)="verificarPassword2(clave3.value, clave4.value)"
+                value="Siguiente" class="btnUsuario3"> 
+              </div>
+            </div>
+          </form>
+
+          <!--Formulario para el registro de PROFESIONALES PARTE 2-->
+          <form [formGroup]="registroProfesionalesForm" (ngSubmit)="registrarProfesionales(registroProfesionalesForm.value, checkbox2.checked)" autocomplete="off" class="formulario-registro4" id="formulario-registro2">
+            <div class="heading">
+              <h2>Una paso más! <fa-icon [icon]="faZapato"></fa-icon></h2>
+            </div>
+
+            <div class="actual-form">
+              <br/>
+              <!--Seleccionar el género del usuario-->
+              <div class="entrada-textos">
+                <select 
+                  name="rol-profesional"
+                  class="campo-entrada"
+                  formControlName="sexo">
+                  <option value="seleccione-genero" selected disabled>Seleccione su género</option>
+                  <option value="masculino">Masculino</option>
+                  <option value="femenino">Femenino</option>
+                  </select>
+              </div>
+
+              <!--Campo para seleccionar el tipo de profesional-->
+              <div class="entrada-textos">
+                <select 
+                  name="rol-profesional"
+                  class="campo-entrada"
+                  formControlName="rol">
+                  <option value="seleccione-rol" selected disabled>Seleccione su rol</option>
+                  <option value="nutricionista">Nutricionista</option>
+                  <option value="entrenador">Entrenador</option>
+                  </select>
+              </div>
+
+              <!--Seleccionar los años de experiencia
+              <div class="entrada-textos">
+                <select 
+                  name="rol-profesional"
+                  class="campo-entrada"
+                  formControlName="rol">
+                  <option value="seleccione-rol" selected disabled>Seleccione años de experiencia</option>
+                  <option value="nutricionista">Menos de 2 años</option>
+                  <option value="entrenador">Entre 3 y 5 años</option>
+                  <option value="entrenador">Entre 5 y 7 años</option>
+                  <option value="entrenador">Entre 7 y 10 años</option>
+                  <option value="entrenador">Más de 10 años</option>
+                  </select>
+              </div>-->
+
               <!--Opción para aceptar los términos y condiciones-->
               <p class="text">
                 <input 
@@ -314,7 +380,7 @@
 
               <!--Botones para regresar o registrarse-->
               <div class="botones-registro-usuario">
-                <input type="button" value="Atrás" class="btnProfesional">
+                <input type="button" value="Atrás" class="btnUsuario3">
                 <input type="submit" value="Registrarme" class="btn-ingresar"> 
               </div>
             </div>
