--- a/HealthLife/src/app/Cliente/dashboard/dashboard.component.css
+++ b/HealthLife/src/app/Cliente/dashboard/dashboard.component.css
@@ -199,85 +199,123 @@ header label span{
 }
 
 /*-------------------------------Sección donde se muestra foto del usuario------------------------*/
-.user-wrapper{
+.action{
+    position: fixed;
+    top: 10px;
+    right: 40px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.action .info-usuario{
+    margin-top: 13px;
+    cursor: pointer;
+}
+
+.action .perfil{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.action .perfil img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.action .menu-perfil{
+    position: absolute;
+    top: 60px;
+    right: -10px;
+    padding: 10px;
+    background: #77dd77;
+    width: 200px;
+    box-sizing: 0 5px 25px rgba(0,0,0,0.1);
+    border-radius: 15px;
+    transition: 0.5s;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.action .menu-perfil.mostrar-menu{
+    visibility: visible;
+    opacity: 1;
+}
+
+.action .menu-perfil::before{
+    content: '';
+    position: absolute;
+    top: -5px;
+    right: 28px;
+    width: 20px;
+    height: 20px;
+    background: #77dd77;
+    transform: rotate(45deg);
+}
+
+.action .menu-perfil h3{
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    padding: 20px 0;
+    font-weight: 500;
+    font-size: 18px;
+    color: white;
+    line-height: 1.2rem;
+}
+
+.action .menu-perfil h3 span{
+    font-size: 14px;
+    color: white;
+    font-weight: 400;
+}
+
+.action .menu-perfil ul li{
+    list-style: none;
+    padding: 10px 0;
+    border-top: 1px solid rgba(221, 219, 219, 0.76);
     display: flex;
     align-items: center;
-    color: #222;
-    margin-right: 1%;
-    width: 25%;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
-.user-wrapper .user-name .dropdown{
-    margin-left: 5%;
+.action .menu-perfil ul li fa-icon{
+    margin-right: 10px;
+    transition: 0.5s;
+    opacity: 0.5;
+    color: white;;
 }
 
-#iconNotificacion{
-    margin-right: 10%;
-    font-size: 24px;
-}
-
-.user-name .dropdown{
-    margin-left: 5%;
-    border-radius: 50px;
-}
-
-.user-name .dropdown{
-    margin-left: -10%;
-    color: #000;
-    width: 100%;
-}
-
-.user-name .dropdown ul {
-    display: block;
-    position: absolute;
-    left: -18px;
-    margin-top: 10%;
-    margin-left: -40%;
-    padding: 10px 0;
-    z-index: 99;
-    opacity: 0;
-    visibility: hidden;
-    background: #fff;
-    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-    transition: 0.3s;
-    border-radius: 0px 0px 20px 20px;
-}
-
-.user-name .dropdown ul li {
-    min-width: 185px;
-    margin-left: 0%;
-    margin-top: 10%;
-}
-
-.user-name .dropdown ul a {
-    padding: 10px 20px;
-    font-size: 15px;
-    color: white;
-    margin-left: 2%;
-}
-
-.user-name .dropdown ul li:hover{
-    background: #fff;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: rgb(5, 196, 88);
-}
-
-.user-name .dropdown ul li a:hover{
-    /*color: #2d71a1;*/
-    color: rgb(5, 196, 88);
-
-}
-
-.user-name .dropdown:hover > ul {
+.action .menu-perfil ul li:hover fa-icon{
     opacity: 1;
-    top: 100%;
-    visibility: visible;
-    background-color: #5dc460;
+    transition: all 300ms ease;
+    transform: scale(1.1);
+}
+
+.action .menu-perfil ul li:hover{
+    opacity: 1;
+    transition: all 300ms ease;
+    transform: scale(1.1);
+}
+
+.action .menu-perfil ul li a{
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    transition: 0.5s;
 }
 
 
 
+/*--------------------------------------------------------------------------------------------*/
 
 #combobox{
     height: 48px;
